--- a/admin/assets/css/custom.css
+++ b/admin/assets/css/custom.css
@@ -7,3 +7,13 @@
             .select2-container--default .select2-selection--single .select2-selection__arrow {
                 height: 36px !important;
             }
+
+.quantityInput{
+    width: 50px !important;
+    padding: 6px 3px;
+    text-align: center;
+    border: 1px solid #cfb1b1;
+    outline: 0;
+    margin-right: 1px;
+}            
+        
